--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "element-ui": "^2.11.1",
+    "gsap": "^2.1.3",
+    "mockjs": "^1.0.1-beta3",
+    "v-viewer": "^1.4.2",
+    "vue": "^2.6.10",
+    "vue-router": "^3.0.3",
+    "vue-star": "0.0.4",
+    "vue-start": "0.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.10.0",
